[gd_scene load_steps=21 format=3 uid="uid://2ds52qtg13pp"]

[ext_resource type="Script" path="res://Escenas/carteles/derota.gd" id="1_cvmly"]
[ext_resource type="AudioStream" uid="uid://q2getqhrn1yc" path="res://sonidos/derrota.mp3" id="2_8pq2p"]
[ext_resource type="Texture2D" uid="uid://bi1ghvkajjjpt" path="res://Sprite/fondos/Perdiste.png" id="2_dnbq7"]
[ext_resource type="Texture2D" uid="uid://bq3uko150lcny" path="res://Escenas/Menu/vv.png" id="3_wusfn"]
[ext_resource type="Texture2D" uid="uid://c7ta8f3ah5se0" path="res://Sprite/fondos/DylanPerfil.png" id="4_wfco2"]
[ext_resource type="Texture2D" uid="uid://cfeisdvkj52nq" path="res://Sprite/fondos/logoBYF.jpg" id="5_h3lb4"]
[ext_resource type="Texture2D" uid="uid://d3k0ufutsrppk" path="res://Sprite/fondos/Que prefeirss.png" id="6_b2ujs"]
[ext_resource type="Texture2D" uid="uid://8tvm75q3p7iu" path="res://Sprite/fondos/Resortera.png" id="7_qadlh"]
[ext_resource type="Texture2D" uid="uid://dve28ety2jjds" path="res://Sprite/fondos/Zona segura.png" id="8_w8phy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4l8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kq1r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgb27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfqgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_go8w3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l50as"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yjjll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbl8d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_770pl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x7vv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kgmmn"]

[node name="derota" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvmly")

[node name="der" type="Node2D" parent="."]
position = Vector2(11, 0)

[node name="Panel" type="Panel" parent="der"]
offset_left = 459.0
offset_top = 142.0
offset_right = 771.0
offset_bottom = 635.0

[node name="TextureRect" type="TextureRect" parent="der/Panel"]
layout_mode = 0
offset_left = -70.0
offset_top = -53.0
offset_right = 452.0
offset_bottom = 627.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_dnbq7")

[node name="menu" type="TextureButton" parent="der/Panel"]
layout_mode = 0
offset_left = -7.0
offset_top = 155.0
offset_right = 354.0
offset_bottom = 262.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_wusfn")

[node name="Text" type="Label" parent="der/Panel/menu"]
layout_mode = 0
offset_left = 123.75
offset_top = 21.25
offset_right = 261.75
offset_bottom = 90.25
theme_override_font_sizes/font_size = 40
text = "Menu"

[node name="Reintentar" type="TextureButton" parent="der/Panel"]
layout_mode = 0
offset_top = 294.0
offset_right = 361.0
offset_bottom = 401.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_wusfn")

[node name="Text" type="Label" parent="der/Panel/Reintentar"]
layout_mode = 0
offset_left = 82.5
offset_top = 26.25
offset_right = 287.5
offset_bottom = 81.25
theme_override_font_sizes/font_size = 40
text = "     ADD"

[node name="add" type="Panel" parent="der"]
visible = false
offset_right = 1284.0
offset_bottom = 744.0

[node name="DylanPerfil" type="Sprite2D" parent="der/add"]
position = Vector2(632, 361)
scale = Vector2(0.673, 0.673)
texture = ExtResource("4_wfco2")

[node name="add" type="TextureButton" parent="der/add"]
layout_mode = 0
offset_left = 808.0
offset_top = 92.0
offset_right = 1169.0
offset_bottom = 199.0
texture_normal = ExtResource("3_wusfn")

[node name="Label" type="Label" parent="der/add/add"]
layout_mode = 0
offset_left = 97.0
offset_top = 22.0
offset_right = 272.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 41
text = "Regresar"

[node name="Button" type="Button" parent="der/add"]
layout_mode = 0
offset_left = 148.0
offset_top = 78.0
offset_right = 449.0
offset_bottom = 169.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4l8b")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8kq1r")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bgb27")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_gfqgy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_go8w3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_l50as")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yjjll")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gbl8d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_770pl")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_x7vv4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kgmmn")
text = "Perfil de X Dylan"

[node name="Label" type="Label" parent="der/add"]
layout_mode = 0
offset_left = 897.0
offset_top = 122.0
offset_right = 980.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 30
text = "saltar"

[node name="LogoByf" type="Sprite2D" parent="der/add"]
position = Vector2(608, 134)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_h3lb4")

[node name="QuePrefeirss" type="Sprite2D" parent="der/add"]
position = Vector2(316, 534)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_b2ujs")

[node name="Resortera" type="Sprite2D" parent="der/add"]
position = Vector2(185, 296)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_qadlh")

[node name="ZonaSegura" type="Sprite2D" parent="der/add"]
position = Vector2(1053, 414)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_w8phy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8pq2p")

[node name="Timer" type="Timer" parent="."]

[node name="publicidad" type="Timer" parent="."]
wait_time = 8.0

[connection signal="pressed" from="der/Panel/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="der/Panel/Reintentar" to="." method="_on_reintentar_pressed"]
[connection signal="pressed" from="der/add/add" to="." method="_on_add_pressed"]
[connection signal="button_down" from="der/add/Button" to="." method="_on_button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="publicidad" to="." method="_on_publicidad_timeout"]
